--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 09:38]
+#+CAPTION: Clock summary at [2019-04-22 Mon 09:48]
 | <75>                                |        |      |      |       |
 | Headline                            | Time   |      |      |     % |
 |-------------------------------------+--------+------+------+-------|
-| *Total time*                        | *0:12* |      |      | 100.0 |
+| *Total time*                        | *0:22* |      |      | 100.0 |
 |-------------------------------------+--------+------+------+-------|
-| Stories                             | 0:12   |      |      | 100.0 |
-| Active                              |        | 0:12 |      | 100.0 |
-| Sprint and product backlog grooming |        |      | 0:12 | 100.0 |
+| Stories                             | 0:22   |      |      | 100.0 |
+| Active                              |        | 0:22 |      | 100.0 |
+| Sprint and product backlog grooming |        |      | 0:22 | 100.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -173,6 +173,7 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-22 Mon 09:38]--[2019-04-22 Mon 09:48] =>  0:10
     CLOCK: [2019-04-22 Mon 09:25]--[2019-04-22 Mon 09:37] =>  0:12
     :END:
 
