--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 09:29]
+#+CAPTION: Clock summary at [2019-04-22 Mon 10:38]
 | <75>                                                              |         |       |       |       |
 | Headline                                                          | Time    |       |       |     % |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                      | *79:21* |       |       | 100.0 |
+| *Total time*                                                      | *80:22* |       |       | 100.0 |
 |-------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                           | 79:21   |       |       | 100.0 |
-| Active                                                            |         | 79:21 |       | 100.0 |
-| Edit release notes for previous sprint                            |         |       |  4:21 |   5.5 |
-| Sprint and product backlog grooming                               |         |       |  7:18 |   9.2 |
+| Stories                                                           | 80:22   |       |       | 100.0 |
+| Active                                                            |         | 80:22 |       | 100.0 |
+| Edit release notes for previous sprint                            |         |       |  4:21 |   5.4 |
+| Sprint and product backlog grooming                               |         |       |  7:18 |   9.1 |
 | Create a video demo for the previous sprint's features            |         |       |  1:35 |   2.0 |
 | Fix issues with emacs                                             |         |       |  2:01 |   2.5 |
 | Fix issues with nightly build                                     |         |       |  0:08 |   0.2 |
-| Add diffing support to string asserter                            |         |       |  1:00 |   1.3 |
-| C# generation is borked                                           |         |       |  4:12 |   5.3 |
-| Reactivate the boilerplate tests                                  |         |       |  5:58 |   7.5 |
+| Add diffing support to string asserter                            |         |       |  1:00 |   1.2 |
+| C# generation is borked                                           |         |       |  4:12 |   5.2 |
+| Reactivate the boilerplate tests                                  |         |       |  5:58 |   7.4 |
 | Update to clang8                                                  |         |       |  0:11 |   0.2 |
 | Do not hard-code static library generation                        |         |       |  1:01 |   1.3 |
 | Generated models should support both static and dynamic libraries |         |       |  0:09 |   0.2 |
 | Fix cmake emacs variable for tab width                            |         |       |  0:38 |   0.8 |
-| Re-read variability modeling papers                               |         |       |  2:59 |   3.8 |
+| Re-read variability modeling papers                               |         |       |  2:59 |   3.7 |
 | Nursing nightlies                                                 |         |       |  1:50 |   2.3 |
-| Fix snags with emacs                                              |         |       |  6:00 |   7.6 |
-| Profiles as meta-model elements                                   |         |       |  8:01 |  10.1 |
-| Redesign annotations model                                        |         |       | 31:59 |  40.3 |
+| Fix snags with emacs                                              |         |       |  6:00 |   7.5 |
+| Profiles as meta-model elements                                   |         |       |  9:02 |  11.2 |
+| Redesign annotations model                                        |         |       | 31:59 |  39.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -543,7 +543,7 @@ Notes:
 *** POSTPONED Profiles as meta-model elements                         :story:
     CLOSED: [2019-04-22 Mon 09:28]
     :LOGBOOK:
-3    CLOCK: [2019-04-12 Fri 07:59]--[2019-04-12 Fri 09:00] =>  1:01
+    CLOCK: [2019-04-12 Fri 07:59]--[2019-04-12 Fri 09:00] =>  1:01
     CLOCK: [2019-04-11 Thu 18:39]--[2019-04-11 Thu 19:09] =>  0:30
     CLOCK: [2019-04-11 Thu 18:35]--[2019-04-11 Thu 18:38] =>  0:03
     CLOCK: [2019-04-11 Thu 18:15]--[2019-04-11 Thu 18:34] =>  0:19
