--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 11:26]
+#+CAPTION: Clock summary at [2019-04-22 Mon 11:47]
 | <75>                                   |        |      |      |       |
 | Headline                               | Time   |      |      |     % |
 |----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *1:58* |      |      | 100.0 |
+| *Total time*                           | *2:18* |      |      | 100.0 |
 |----------------------------------------+--------+------+------+-------|
-| Stories                                | 1:58   |      |      | 100.0 |
-| Active                                 |        | 1:58 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 1:36 |  81.4 |
-| Sprint and product backlog grooming    |        |      | 0:22 |  18.6 |
+| Stories                                | 2:18   |      |      | 100.0 |
+| Active                                 |        | 2:18 |      | 100.0 |
+| Edit release notes for previous sprint |        |      | 1:56 |  84.1 |
+| Sprint and product backlog grooming    |        |      | 0:22 |  15.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2019-04-22 Mon 11:24]
     :LOGBOOK:
+    CLOCK: [2019-04-22 Mon 11:27]--[2019-04-22 Mon 11:47] =>  0:20
     CLOCK: [2019-04-22 Mon 09:50]--[2019-04-22 Mon 11:26] =>  1:36
     :END:
 
