--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,23 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 14:37]
+#+CAPTION: Clock summary at [2019-04-22 Mon 16:37]
 | <75>                                                   |        |      |      |       |
 | Headline                                               | Time   |      |      |     % |
 |--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *4:21* |      |      | 100.0 |
+| *Total time*                                           | *4:57* |      |      | 100.0 |
 |--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 4:21   |      |      | 100.0 |
-| Active                                                 |        | 4:21 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 2:04 |  47.5 |
-| Sprint and product backlog grooming                    |        |      | 0:22 |   8.4 |
-| Create a video demo for the previous sprint's features |        |      | 1:55 |  44.1 |
+| Stories                                                | 4:57   |      |      | 100.0 |
+| Active                                                 |        | 4:57 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 2:40 |  53.9 |
+| Sprint and product backlog grooming                    |        |      | 0:22 |   7.4 |
+| Create a video demo for the previous sprint's features |        |      | 1:55 |  38.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2019-04-22 Mon 11:24]
     :LOGBOOK:
+    CLOCK: [2019-04-22 Mon 16:01]--[2019-04-22 Mon 16:37] =>  0:36
     CLOCK: [2019-04-22 Mon 12:21]--[2019-04-22 Mon 12:29] =>  0:08
     CLOCK: [2019-04-22 Mon 11:27]--[2019-04-22 Mon 11:47] =>  0:20
     CLOCK: [2019-04-22 Mon 09:50]--[2019-04-22 Mon 11:26] =>  1:36
@@ -115,7 +116,7 @@ Happy Modeling!
 #+end_src
 
 - [[https://twitter.com/MarcoCraveiro/status/1115302519067090947][Tweet]]
-- [[https://www.linkedin.com/feed/update/urn:li:activity:6521068658024804352][LinkedIn]]
+- [[https://www.linkedin.com/feed/update/urn:li:activity:6526115847252041728][LinkedIn]]
 - [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
