--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,17 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 16:37]
+#+CAPTION: Clock summary at [2019-04-22 Mon 17:55]
 | <75>                                                   |        |      |      |       |
 | Headline                                               | Time   |      |      |     % |
 |--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *4:57* |      |      | 100.0 |
+| *Total time*                                           | *6:01* |      |      | 100.0 |
 |--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 4:57   |      |      | 100.0 |
-| Active                                                 |        | 4:57 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 2:40 |  53.9 |
-| Sprint and product backlog grooming                    |        |      | 0:22 |   7.4 |
-| Create a video demo for the previous sprint's features |        |      | 1:55 |  38.7 |
+| Stories                                                | 6:01   |      |      | 100.0 |
+| Active                                                 |        | 6:01 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 2:40 |  44.3 |
+| Sprint and product backlog grooming                    |        |      | 0:22 |   6.1 |
+| Create a video demo for the previous sprint's features |        |      | 1:55 |  31.9 |
+| Read variability papers                                |        |      | 1:04 |  17.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -134,6 +135,40 @@ Updates to sprint and product backlog.
     :END:
 
 Demo the delete empty directories feature.
+
+*** STARTED Read variability papers                                   :story:
+    :LOGBOOK:
+    CLOCK: [2019-04-22 Mon 17:39]--[2019-04-22 Mon 17:54] =>  0:15
+    CLOCK: [2019-04-22 Mon 16:50]--[2019-04-22 Mon 17:39] =>  0:49
+    :END:
+
+We still have a couple of variability papers we need to read to make
+sure our approach is aligned with the literature.
+
+- we are simultaneously a user of SPLE and a enabler of SPLE for end
+  users of MASD.
+- we also make use of weaving between the user model and the modeling
+  of variability.
+- MASD models and manages technical variability, leaving essential
+  variability to the end user to handle.
+- we only care about internal variability. External variability is
+  left to the end user.
+- the SRAP process also has a variability process. This needs to be
+  documented.
+- the multidimensional approach makes variation points hidden from the
+  modeling. However, their application is limited to the topology of
+  archetype space; it is not available to application engineering,
+  only to the MASD use of domain engineering.
+- we make use of binding times to bind configurations to modeling
+  elements.
+- we need feature groups to represent:
+  - windows support
+  - visual studio support
+- feature selection is done at two levels: profiles and
+  configuration. This is why we cannot name =configuration= class
+  =selection=.
+- we have two asset models: product and component. They both project
+  into archetype space, and both bind into the same variability model.
 
 *** Profiles as meta-model elements                                   :story:
 
