--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,18 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-22 Mon 17:55]
+#+CAPTION: Clock summary at [2019-04-23 Tue 07:55]
 | <75>                                                   |        |      |      |       |
 | Headline                                               | Time   |      |      |     % |
 |--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *6:01* |      |      | 100.0 |
+| *Total time*                                           | *6:34* |      |      | 100.0 |
 |--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 6:01   |      |      | 100.0 |
-| Active                                                 |        | 6:01 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 2:40 |  44.3 |
-| Sprint and product backlog grooming                    |        |      | 0:22 |   6.1 |
-| Create a video demo for the previous sprint's features |        |      | 1:55 |  31.9 |
-| Read variability papers                                |        |      | 1:04 |  17.7 |
+| Stories                                                | 6:34   |      |      | 100.0 |
+| Active                                                 |        | 6:34 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 2:40 |  40.6 |
+| Sprint and product backlog grooming                    |        |      | 0:22 |   5.6 |
+| Create a video demo for the previous sprint's features |        |      | 1:55 |  29.2 |
+| Read variability papers                                |        |      | 1:04 |  16.2 |
+| Implement variability model                            |        |      | 0:33 |   8.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -164,11 +165,22 @@ sure our approach is aligned with the literature.
 - we need feature groups to represent:
   - windows support
   - visual studio support
+- alternatively, we need to figure out if we can't just use profiles
+  to simulate configuration groups.
 - feature selection is done at two levels: profiles and
   configuration. This is why we cannot name =configuration= class
   =selection=.
 - we have two asset models: product and component. They both project
   into archetype space, and both bind into the same variability model.
+
+*** STARTED Implement variability model                               :story:
+    :LOGBOOK:
+    CLOCK: [2019-04-23 Tue 07:21]--[2019-04-23 Tue 07:54] =>  0:33
+    :END:
+
+On the back of the redesign of the annotations model, which was
+completed last sprint, we now have to implement all classes and then
+hook them up to the engine.
 
 *** Profiles as meta-model elements                                   :story:
 
@@ -421,116 +433,6 @@ Notes:
 - we probably should rename =coding::configuration= to "unbound
   configuration" or some other name to make it distinct from
   =variability::configuration=.
-
-*** Redesign annotations model                                        :story:
-
-There has been a great deal of confusion regarding how annotations
-have been used. We have the following use cases/names:
-
-- annotation: store of configuration. The store is "dynamic", in the
-  sense that the values are changeable at run time.
-- coding configuration: "adapter" to allow the meta-model to carry
-  "configuration templates" - that which we call profiles.
-- profiles: templates for configuration. These are stored as
-  templates, and subsequently instantiated into annotations.
-
-Note that the annotations are of two "types":
-
-- stand alone annotations: these are the product of configuration
-  template instantiation. These are sourced from JSON files (at
-  present) or model elements (the coding configuration). These are
-  unbound configurations.
-- element owned annotations: these are sourced from regular model
-  elements. These are bound configurations.
-
-The objective is to apply stand alone configurations to element owned
-configurations via the mappings in stereotypes. Given all of this, the
-existing names are woefully inadequate, and its becoming more
-confusing as we make increased use of this functionality. We need to
-rename all of these model types to more sensible names and document
-their responsibilities else this code will become (even more)
-unmaintainable.
-
-Notes:
-
-- the annotations model should really be called configuration because
-  it deals with all of the primitives for configuration. Or better
-  yet: variability2. Note that this model is concerned with structural
-  variability. We will leave non-structural variability (configuration
-  files) for another time. we need to split this out in the backlog.
-- the annotation class is really a typed configuration
-  store. We use the name store to avoid confusion with the established
-  repository idiom, e.g.: =configuration::store=.
-- profiles are configuration templates.
-- the annotation expander is a =store_builder=. It creates a store
-  from a set of configuration templates.
-- the coding configuration is actually a configuration template.
-- a type is actually a (typed) feature. What we are calling type
-  groups are feature groups. Traits are feature names. In the future,
-  we will code-generate the insertion of features into the variablity
-  model feature store, and the conversion of dynamic configurations
-  into concrete configurations (c++ types). By declaring a model
-  element as a feature group, each attribute becomes a feature. The
-  code generator reads the features and injects them into the
-  variability model. It also creates the C++ type. It also creates
-  code to convert from and to the dynamic configuration
-  representation. It also contains the feature and feature group
-  documentation, accessible at run-time.
-- maybe we should call feature group "feature set" instead to avoid
-  confusion with xor/or-groups in feature diagrams.
-- what we are calling scope types is perhaps called "binding times".
-- there is a simple algebra of configurations such as a + b = c
-  (confiugrations are additive), etc. The algebra dictates the order
-  of operations.
-- tagged values could be configuration points. This is not to be
-  confused with variation points.
-- unlike Clauss, Possompes et al., our approach to variability is to
-  only expose it at the code generator level. Users can create
-  configurations but on the happy path they are not expected to create
-  new features. In addition, if they do create new features, these can
-  only be used to configure the behaviour of the code generator
-  (e.g. their own templates). It is structural variability, but not
-  for user models. Concretely, this means you cannot use features to
-  determine the shape of modeling elements (have a sort algorithm
-  interface that has variation points to determine the actual
-  algorithm to use). This is explicitly a non-goal of our approach. In
-  effect, we are focused only on structural variability inside the
-  archetype space, not the coding space.
-- we need to use the names bound and unbound configurations. The
-  expander takes a set of unbound configurations, finds those that
-  bind to stereotypes (candidate bindings) and then performs the
-  addition operation between the element bound configuration and the
-  stereotype bound configuration. Maybe we should call it "binder"?
-- merger should be called "adder": it performs the "addition"
-  operation on two configurations. However, our addition is
-  non-commutative and non-associative. Maybe its not addition? Its not
-  clear by looking at wikipedia so lets stick to merger.
-- tracing is dependent on variability at present. This is only because
-  we are dumping the inputs. We need a different way of doing this.
-- we could create a top-level variability chain - the "profile binding
-  chain" - that receives as input a configuration model set and a
-  feature model. Configuration model sets are made up of configuration
-  models. These are made up of a set of profile templates, the global
-  configuration and the local configuration. The last two are
-  pointers. The chain then is made up of the following transforms:
-  - instantiate all profile templates across all models in the model
-    set.
-  - process all profile template relationships.
-  - create all profiles.
-  - bind all profiles to configurations.
-  - apply the global to local configuration transform.
-- at the coding level we then copy across the configurations to the
-  corresponding model elements. This is done
-- add variable to determine if a feature is available to the
-  configuration/profile or not.
-
-Tasks:
-
-- rename annotations to variability.
-- rename type to feature.
-- rename type group to feature group. Leave traits as is for now.
-- rename annotation to configuration.
-- create archetype model and mode archetype related types there.
 
 *** Enablement problem is in the variability domain                   :story:
 
