--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-23 Tue 10:35]
+#+CAPTION: Clock summary at [2019-04-23 Tue 10:59]
 | <75>                                                   |        |      |      |       |
 | Headline                                               | Time   |      |      |     % |
 |--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *7:18* |      |      | 100.0 |
+| *Total time*                                           | *7:41* |      |      | 100.0 |
 |--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 7:18   |      |      | 100.0 |
-| Active                                                 |        | 7:18 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 2:40 |  36.5 |
-| Sprint and product backlog grooming                    |        |      | 0:22 |   5.0 |
-| Create a video demo for the previous sprint's features |        |      | 1:55 |  26.3 |
-| Read variability papers                                |        |      | 1:04 |  14.6 |
-| Implement variability model                            |        |      | 1:17 |  17.6 |
+| Stories                                                | 7:41   |      |      | 100.0 |
+| Active                                                 |        | 7:41 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 2:40 |  34.7 |
+| Sprint and product backlog grooming                    |        |      | 0:22 |   4.8 |
+| Create a video demo for the previous sprint's features |        |      | 1:55 |  24.9 |
+| Read variability papers                                |        |      | 1:04 |  13.9 |
+| Implement variability model                            |        |      | 1:40 |  21.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -175,6 +175,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-23 Tue 10:36]--[2019-04-23 Tue 10:59] =>  0:23
     CLOCK: [2019-04-23 Tue 09:51]--[2019-04-23 Tue 10:35] =>  0:44
     CLOCK: [2019-04-23 Tue 07:21]--[2019-04-23 Tue 07:54] =>  0:33
     :END:
