--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -11,21 +11,20 @@
 * Stories
 
 ** Active
-
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-23 Tue 10:59]
-| <75>                                                   |        |      |      |       |
-| Headline                                               | Time   |      |      |     % |
-|--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *7:41* |      |      | 100.0 |
-|--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 7:41   |      |      | 100.0 |
-| Active                                                 |        | 7:41 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 2:40 |  34.7 |
-| Sprint and product backlog grooming                    |        |      | 0:22 |   4.8 |
-| Create a video demo for the previous sprint's features |        |      | 1:55 |  24.9 |
-| Read variability papers                                |        |      | 1:04 |  13.9 |
-| Implement variability model                            |        |      | 1:40 |  21.7 |
+#+CAPTION: Clock summary at [2019-04-24 Wed 10:58]
+| <75>                                                   |         |       |      |       |
+| Headline                                               | Time    |       |      |     % |
+|--------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                           | *10:52* |       |      | 100.0 |
+|--------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                | 10:52   |       |      | 100.0 |
+| Active                                                 |         | 10:52 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 2:40 |  24.5 |
+| Sprint and product backlog grooming                    |         |       | 0:22 |   3.4 |
+| Create a video demo for the previous sprint's features |         |       | 1:55 |  17.6 |
+| Read variability papers                                |         |       | 1:04 |   9.8 |
+| Implement variability model                            |         |       | 4:51 |  44.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -175,6 +174,10 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-24 Wed 10:53]--[2019-04-24 Wed 10:57] =>  0:04
+    CLOCK: [2019-04-24 Wed 09:01]--[2019-04-24 Wed 10:52] =>  1:51
+    CLOCK: [2019-04-23 Tue 13:42]--[2019-04-23 Tue 14:06] =>  0:24
+    CLOCK: [2019-04-23 Tue 11:00]--[2019-04-23 Tue 11:52] =>  0:52
     CLOCK: [2019-04-23 Tue 10:36]--[2019-04-23 Tue 10:59] =>  0:23
     CLOCK: [2019-04-23 Tue 09:51]--[2019-04-23 Tue 10:35] =>  0:44
     CLOCK: [2019-04-23 Tue 07:21]--[2019-04-23 Tue 07:54] =>  0:33
