--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-24 Wed 12:07]
+#+CAPTION: Clock summary at [2019-04-24 Wed 14:15]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *11:59* |       |      | 100.0 |
+| *Total time*                                           | *12:59* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 11:59   |       |      | 100.0 |
-| Active                                                 |         | 11:59 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 2:40 |  22.3 |
-| Sprint and product backlog grooming                    |         |       | 0:22 |   3.1 |
-| Create a video demo for the previous sprint's features |         |       | 1:55 |  16.0 |
-| Read variability papers                                |         |       | 1:04 |   8.9 |
-| Implement variability model                            |         |       | 5:58 |  49.8 |
+| Stories                                                | 12:59   |       |      | 100.0 |
+| Active                                                 |         | 12:59 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 2:40 |  20.5 |
+| Sprint and product backlog grooming                    |         |       | 0:22 |   2.8 |
+| Create a video demo for the previous sprint's features |         |       | 1:55 |  14.8 |
+| Read variability papers                                |         |       | 1:04 |   8.2 |
+| Implement variability model                            |         |       | 6:58 |  53.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -174,6 +174,8 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-24 Wed 13:44]--[2019-04-24 Wed 14:15] =>  0:31
+    CLOCK: [2019-04-24 Wed 13:14]--[2019-04-24 Wed 13:43] =>  0:29
     CLOCK: [2019-04-24 Wed 11:55]--[2019-04-24 Wed 12:07] =>  0:12
     CLOCK: [2019-04-24 Wed 11:11]--[2019-04-24 Wed 11:54] =>  0:43
     CLOCK: [2019-04-24 Wed 10:58]--[2019-04-24 Wed 11:10] =>  0:12
